# vim: set noexpandtab:

2012-01-22 Serhan Mete <amete@cern.ch>
	* Implementing the newly added truth variables.
	* Still work in progress...
	* Files affected are:
	* M       Root/SusyD3PDAna.cxx
	* M       Root/SusyNtMaker.cxx
	* M       SusyCommon/SusyD3PDAna.h
	* M       SusyCommon/SusyNtMaker.h
	* M       util/NtMaker.cxx

2013-01-21 Steve
	* Added EF_2mu8_EFxe40wMu_tclcw trigger check
		* Only used in data with run>=206248 (Period C and onwards)
	* Tagging SusyCommon-00-00-54

2013-01-20 Steve
	* Tagging SusyCommon-00-00-53

2013-01-18 Matt
	* Bug fix for saving jet pt's when systematics are turned on. Wasn't recalibrating Pt

2013-01-17 Steve
	* Adding grl command line option to NtMaker
	* Updated default grl to Moriond version
	* Adding missing triggers for lep-tau trigger matching: EF_e18vh_medium1, EF_mu15
	* Added pileup weights for periods I+L
		* probably temporary
	* Tagging SusyCommon-00-00-52

2013-01-16 Matt
	* Added 'smart veto' back to event flags
	* Added bch_corr_jet to jet class
	* Update muon variables for id and ms (not me) after email with Beate

2013-01-15 Matt
	* Added qoverp for id and me

2013-01-14 Steve
	* Tagging SusyCommon-00-00-51

2013-01-11 Steve
	* MET flavor now controlled by the SUSYMet enum
		* Still set by a string in setMetFlavor method
		* 2 flavors supported in SUSYTools: STVF and STVF_JVF

2013-01-09 Steve
	* Commented out most of the event selection in SusyMetValidation
	* Updated SusyMetValidation branch usage to p1328 D3PDs
	* Changed debug level for some print statements

2012-12-15 Steve
	* Added support for JetTauEtmiss stream
	* Tagging SusyCommon-00-00-50

2012-12-14 Steve
	* Filling matched2TruthLepton for all leptons
	* Tagging SusyCommon-00-00-49

2012-12-13 Steve
	* Fixed tau trigger flag saving (thanks Matt Gignac)

2012-12-06 Steve
	* Updated to SUSYTools revision 528837
	* Updated tau usage with SUSYTools and MultiLep
	* Updated LeptonTruthTools tag and usage