@@ -376,9 +376,7 @@ bool SusyNtMaker::selectEvent()
                                     d3pd.ele.type(), d3pd.ele.origin(),
                                     d3pd.truthMu.pt(), d3pd.truthMu.eta(), d3pd.truthMu.phi(), d3pd.truthMu.m(),
                                     d3pd.truthMu.type(), d3pd.truthMu.origin(),
-                                    d3pd.trk.pt(), d3pd.trk.eta(), d3pd.trk.phi_wrtPV(), d3pd.trk.mc_barcode());
-
-                                    
+                                    d3pd.trk.pt(), d3pd.trk.eta(), d3pd.trk.phi_wrtPV(), d3pd.trk.mc_barcode());                    
   }
 
   if(m_fillNt){
@@ -895,6 +893,11 @@ void SusyNtMaker::fillTruthParticleVars()
 {
   if(m_dbg>=5) cout << "fillTruthParticleVars" << endl;
 
+  // Retrieve indicies
+  m_truParticles        = m_recoTruthMatch.LepFromHS_McIdx();
+  vector<int> truthTaus = m_recoTruthMatch.TauFromHS_McIdx();
+  m_truParticles.insert( m_truParticles.end(), truthTaus.begin(), truthTaus.end() );
+
   // Loop over selected truth particles
   for(uint iTruPar=0; iTruPar<m_truParticles.size(); iTruPar++){
     int truParIdx = m_truParticles[iTruPar];  
@@ -907,7 +910,7 @@ void SusyNtMaker::fillTruthParticleVars()
     float eta = d3pd.truth.eta()->at(truParIdx);
     float phi = d3pd.truth.phi()->at(truParIdx);
     float m   = d3pd.truth.m()  ->at(truParIdx) / GeV;
-  
+ 
     tprOut->SetPtEtaPhiM(pt, eta, phi, m);
     tprOut->pt          = pt;
     tprOut->eta         = eta;
